Revert "Fix Dia browser rendering flicker"
This reverts commit 8cbf8da7702c74af366213109755f69eb68716bf.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,8 +34,6 @@ html::before {
     background-position: center;
     background-repeat: no-repeat;
     z-index: -1;
-    will-change: transform;
-    backface-visibility: hidden;
 }
 
 body {
